<resources>
    <string name="app_name">PromoterApp</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>


    <string name="next">Next</string>
    <string name="promoter">Promoter</string>
    <string name="you_are">You are ?</string>
    <string name="lapu_number">Lapu number</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="verify">Verify</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="empty_usertype">Please select user type</string>
    <string name="empty_otp">Please enter otp</string>
    <string name="empty_mob_num">Please enter mobile number</string>
    <string name="empty_pwd">Please enter password</string>
    <string name="empty_confirm_pwd">Please enter confirm password</string>
    <string name="pwd_mismatch">Password and confirm do not match</string>
    <string name="empty_lapu_no">Please enter LAPU number</string>
    <string name="valid_lapu_no">Please enter valid LAPU number</string>


    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for face detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="attendance">Attendance</string>
    <string name="otp">OTP</string>
    <string name="selfie">Selfie</string>
    <string name="login">Login</string>
    <string name="user_type">User Type</string>
    <string name="btn_request_otp">REQUEST OTP</string>
    <string name="enter_lapu_number">Enter LAPU Number</string>
    <string name="select_category">Select Category</string>
    <string name="enter_6_digit_otp_received">Enter 6 Digit OTP Received</string>
    <string name="create_a_4_digit_password">Create a 4 Digit Password</string>
    <string name="powered_by">Powered by</string>
    <string name="didn_t_receive_otp_resend">Didn’t receive OTP? Resend ›</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="confirm_your_4_digit_password">Confirm your 4 Digit Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_using_a_different_account">Sign In using a different account</string>
    <string name="enter_your_4_digit_password">Enter your 4 Digit Password</string>

    <!-- FCM values -->
    <string name="LOCAL_PREF">local_pref</string>
    <string name="LOCAL_APPVERSION">local_appVersion</string>
    <string name="LOCAL_SESSIONID">local_sessionId</string>
    <string name="LOCAL_DEVICEID">local_deviceId</string>


</resources>
