<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="@dimen/margin_30"
    android:paddingRight="@dimen/margin_30">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_34"
        android:background="@drawable/circle_red_bg"
        android:padding="@dimen/padding_11"
        android:src="@drawable/loud_speeker" />

    <TextView
        android:id="@+id/promoter_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_14_5"
        android:lineSpacingExtra="@dimen/line_spacing_6"
        android:text="@string/promoter"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_24" />

    <TextView
        android:id="@+id/login_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/promoter_level"
        android:layout_marginTop="@dimen/margin_36_5"
        android:lineSpacingExtra="@dimen/line_spacing_5"
        android:text="@string/login"
        android:textColor="@color/grey_dark"
        android:textSize="@dimen/text_size_20" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_frag_login_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_level"
        android:layout_marginTop="@dimen/margin_17">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mobile_number"
            android:inputType="phone"
            android:lineSpacingExtra="@dimen/line_spacing_3"
            android:maxLength="10"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/text_size_16" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_frag_login_lapu_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input_layout_frag_login_psw"
        android:layout_marginTop="@dimen/margin_22_5">

        <EditText
            android:id="@+id/et_frag_login_lapu_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_your_4_digit_password"
            android:inputType="textPassword"
            android:lineSpacingExtra="@dimen/line_spacing_3"
            android:maxLength="4"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/text_size_16" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_frag_login_lapu_num"
        android:layout_marginTop="@dimen/margin_12_5"
        android:lineSpacingExtra="@dimen/line_spacing_5"
        android:text="@string/forgot_password"
        android:textColor="@color/blue_light"
        android:textSize="@dimen/text_size_14" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resend_otp"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/bg_btn_blue_curved"
        android:lineSpacingExtra="@dimen/line_spacing_5"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_12_5"
        android:lineSpacingExtra="@dimen/line_spacing_5"
        android:text="@string/sign_in_using_a_different_account"
        android:textColor="@color/blue_light"
        android:textSize="@dimen/text_size_14" />

</RelativeLayout>